Get dos emprestimos + Swagger
